--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "devDependencies": {
     "@babel/core": "*",
+    "@commitlint/cli": "^13.2.0",
     "@tsconfig/recommended": "^1.0.1",
     "expo-yarn-workspaces": "^1.5.2",
     "husky": "^7.0.2",
     "lint-staged": "^11.2.0",
-    "sort-package-json": "^1.52.0"
+    "sort-package-json": "^1.52.0",
+    "typescript": "^4.3.5"
   }
 }
