feat: create @coinbase/components package

--- a/packages/app/app.json
+++ b/packages/app/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "coinbase",
+    "name": "Coinbase",
     "slug": "coinbase",
     "version": "1.0.0",
     "orientation": "portrait",
