--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "scripts": {
     "app": "yarn workspace @coinbase/app",
+    "components": "yarn workspace @coinbase/components",
     "delete:node_modules": "find . -name \"node_modules\" -exec rm -rf '{}' +",
     "postinstall": "husky install && echo 'Ready to hack!'",
     "lint": "eslint --fix --ext .js,jsx,.ts,.tsx"
