--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -12,6 +12,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@coinbase/components": "*",
     "expo": "~42.0.1",
     "expo-keep-awake": "~9.2.0",
     "expo-status-bar": "~1.0.4",
