--- a/packages/eslint/package.json
+++ b/packages/eslint/package.json
@@ -12,11 +12,11 @@
   },
   "devDependencies": {
     "@babel/core": "*",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
-    "eslint": "^7.30.0",
-    "eslint-config-universe": "^7.0.1",
-    "prettier": "^2.3.2",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.24.2",
+    "prettier": "^2.4.1",
     "typescript": "^4.3.5"
   }
 }
