--- a/packages/babel/package.json
+++ b/packages/babel/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@babel/core": "*",
+    "@babel/plugin-proposal-class-properties": "*",
     "babel-preset-expo": "^8.4.1"
   }
 }
