--- a/packages/eslint/package.json
+++ b/packages/eslint/package.json
@@ -16,6 +16,7 @@
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-react-native": "^3.11.0",
     "prettier": "^2.4.1",
     "typescript": "^4.3.5"
   }
