feat: create @coinbase/storybook package

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "components": "yarn workspace @coinbase/components",
     "delete:node_modules": "find . -name \"node_modules\" -exec rm -rf '{}' +",
     "postinstall": "husky install && expo-yarn-workspaces check-workspace-dependencies && echo 'Ready to hack!'",
-    "lint": "eslint --fix --ext .js,jsx,.ts,.tsx"
+    "lint": "eslint --fix --ext .js,jsx,.ts,.tsx",
+    "storybook": "yarn workspace @coinbase/storybook"
   },
   "devDependencies": {
     "@babel/core": "*",
