--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -19,21 +19,14 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "^2.2.2",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "*",
-    "@storybook/addon-actions": "^5.3",
-    "@storybook/addon-knobs": "^5.3",
-    "@storybook/addon-links": "^5.3",
-    "@storybook/addon-ondevice-actions": "^5.3.23",
-    "@storybook/addon-ondevice-knobs": "^5.3.25",
-    "@storybook/cli": "^6.3.10",
-    "@storybook/react-native": "^5.3.25",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
-    "babel-loader": "^8.2.2",
     "typescript": "^4.3.5"
   },
   "expo-yarn-workspaces": {
