--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@coinbase/components": "*",
+    "@react-navigation/drawer": "^6.1.7",
+    "@react-navigation/native": "^6.0.5",
     "expo": "~42.0.1",
     "expo-keep-awake": "~9.2.0",
     "expo-status-bar": "~1.0.4",
