--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@coinbase/components": "*",
+    "@react-navigation/native": "^6.0.5",
+    "@react-navigation/native-stack": "^6.2.3",
     "expo": "~42.0.1",
     "expo-keep-awake": "~9.2.0",
     "expo-status-bar": "~1.0.4",
@@ -21,6 +23,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "^2.2.2",
+    "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12"
   },
