--- a/packages/babel/package.json
+++ b/packages/babel/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@coinbase/babel",
+  "name": "@coinbase/babel-preset-expo",
   "version": "1.0.0",
   "private": true,
   "main": "index.js",
@@ -12,7 +12,6 @@
   },
   "devDependencies": {
     "@babel/core": "*",
-    "@babel/plugin-proposal-class-properties": "*",
     "babel-preset-expo": "^8.4.1",
     "react-native-reanimated": "^2.2.2"
   }
