--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "delete:node_modules": "find . -name \"node_modules\" -exec rm -rf '{}' +",
     "postinstall": "husky install && expo-yarn-workspaces check-workspace-dependencies && echo 'Ready to hack!'",
     "lint": "eslint --fix --ext .js,jsx,.ts,.tsx",
-    "storybook": "yarn workspace @coinbase/storybook"
+    "storybook": "yarn workspace @coinbase/storybook",
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/core": "*",
@@ -19,6 +20,7 @@
     "@tsconfig/recommended": "^1.0.1",
     "expo-yarn-workspaces": "^1.5.2",
     "husky": "^7.0.2",
+    "jest": "^27.2.5",
     "lint-staged": "^11.2.0",
     "sort-package-json": "^1.52.0",
     "typescript": "^4.3.5"
