--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -15,8 +15,11 @@
   },
   "devDependencies": {
     "@babel/core": "*",
+    "@types/jest": "^27.0.2",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "jest": "^27.2.5",
+    "jest-expo": "^42.1.0",
     "typescript": "^4.3.5"
   }
 }
