--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "@babel/core": "*",
+    "@testing-library/jest-native": "^4.0.2",
+    "@testing-library/react-native": "^8.0.0",
     "@types/jest": "^27.0.2",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
