--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -12,6 +12,7 @@
     "target": "ESNext",
     "resolveJsonModule": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": true,
+    "types": ["node", "jest", "@testing-library/jest-native"]
   }
 }
